<resources>
    <string name="app_name">DanielAguileraAndroid2019</string>
    <string name="title">Android 2019</string>
    <string name="score">Your score: %s</string>
    <string name="time_left">Time left %s</string>
    <string name="tap_me">TAP ME</string>
    <string name="hello_world">Hello World</string>
    <string name="timefighter">TIMEFIGHTER</string>
    <string name="name_repo">DanielAguileraAndroid2019 \n @eagleera</string>
    <string name="end_game">Game Over %s</string>
    <string name="tempConversion">Convert temperature</string>
    <string name="convert_temp">Convert</string>
    <string name="celsius">Celsius</string>
    <string name="celsius_placeholder">10</string>
...
