...
                android:width="190dp"
                android:backgroundTint="#8BC34A"
                android:text="@string/tempConversion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnTimeFighter" />

        <Button
                android:id="@+id/btnTimeFighter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
...
